<resources>
    <string name="app_name">JuegoTablero</string>
    <string name="turno_jugador1">%1$s turn</string>
    <string name="turno_jugador2">%1$s turn</string>
    <string name="infoJugador1">J1 info: </string>
    <string name="infoJugador2">J2 info: </string>
    <string name="PAdivinaPalabra">Guess the word</string>
    <string name="PTest">Test</string>
    <string name="PParejas">Match</string>
    <string name="PRepaso">Learn up</string>
    <string name="PFinal">Final test</string>
    <string name="pregunta">Question statement</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comprobar">Check</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="logo">Logo</string>


    <!-- Menu lateral -->
    <string name="nueva_partida">New game</string>
    <string name="sobre_nosotros">About us</string>
    <string name="añadir_preguntas">New questions</string>
    <string name="ajustes">Settings</string>
    <string name="salir">Exit</string>
    <string name="estadisticas">Statistics</string>

    <!-- Menu inicio -->
    <string name="continuar_partida">Continue game</string>
    <string name="partidas_guardadas">Saved games</string>
    <string name="cerrar">Close</string>
    <string name="borrar_partidas">Delete all games</string>
    <string name="resetear_estadisticas">Reset statistics</string>


    <!-- Estadisticas -->
    <string name="resetear">Reset</string>
    <string name="minijuegos_jugados">Played minigames: %1$s</string>
    <string name="minijuegos_ganados">Won minigames: %1$s</string>
    <string name="minijuegos_perdidos">Lost minigames: %1$s</string>
    <string name="partidas_ganadas">Won games: %1$s</string>
    <string name="jugador1">Player 1</string>
    <string name="jugador2">Player 2</string>


    <!-- Añadir preguntas -->
    <string name="tipoPregunta">What type of question do you want to add?</string>
    <string name="respuestaCorrecta">Correct answer:</string>
    <string name="opcion1">Option 1</string>
    <string name="opcion2">Option 2</string>
    <string name="opcion3">Option 3</string>
    <string name="palabra">Word</string>

    <string name="escribeEnunciado">Write your statement here…</string>
    <string name="escribeDefinicion">write your definition here…</string>
    <string name="nuevaPregunta">New question %1$s</string>
    <string name="crearNuevaPregunta">Create new question</string>
    <string name="musica">Music</string>

    <string name="vibracionDescativada">Vibration off</string>
    <string name="vibracionActivada">Vibration on</string>
    <string name="musicaDesactivada">Music off</string>
    <string name="musicaActivada">Music on</string>

    <string name="resetearConfirmacion">Are you sure you want to reset the statistics?</string>
    <string name="resetearConfirmacionMensaje">All saved statistics will be deleted forever</string>

    <string name="cancelar">Cancel</string>
    <string name="aceptar">Accept</string>

    <string name="borrarConfirmacion">Are you sure you want to delete all saved games?</string>
    <string name="borrarConfirmacionMensaje">All saved games will be deleted forever</string>

    <string name="tirada">You have rolled a %1$d</string>
    <string name="casillaCaida">You have fallen into a %1$s game</string>

    <string name="finDePartida">Game over</string>
    <string name="mensajePruebaFinal">You have completed all the tests and the final test will begin</string>

    <string name="noInternet">No internet connection, try again later</string>

    <string name="crearJugadores">Create players</string>

    <string name="nombreJugador1">Player 1 name</string>
    <string name="nombreJugador2">Player 2 name</string>

    <string name="crear">Create</string>

</resources>